--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch assets/scss/style.scss:./public/assets/css/style.css"
+    "sass": "sass --watch assets/scss/style.scss:./public/assets/css/style.css",
+    "ld-sass": "sass --watch assets/scss/lucile.scss:./public/assets/css/style.css"
   },
   "repository": {
     "type": "git",
