--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "sass": "sass --watch assets/scss/style.scss:./public/assets/css/style.css",
     "sass-gallery": "sass --watch assets/scss/gallery.scss:./public/assets/css/style.css",
-    "ld-sass": "sass --watch assets/scss/lucile.scss:./public/assets/css/style.css"
+    "ld-sass": "sass --watch assets/scss/lucile.scss:./public/assets/css/style.css",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   },
   "homepage": "https://github.com/ClaraGuerville/projet-nft#readme",
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "express": "^4.18.0"
   }
 }
