--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ClaraGuerville/projet-nft#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "ejs": "^3.1.7",
     "express": "^4.18.0"
   }
 }
