--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch assets/scss/style.scss:./public/assets/css/style.css",
-    "sass-gallery": "sass --watch assets/scss/gallery.scss:./public/assets/css/style.css",
-    "ld-sass": "sass --watch assets/scss/lucile.scss:./public/assets/css/style.css"
+    "sass": "sass --watch assets/scss/style.scss:./public/assets/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -19,6 +17,7 @@
   },
   "homepage": "https://github.com/ClaraGuerville/projet-nft#readme",
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "node": "^17.7.2"
   }
 }
