--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   },
   "homepage": "https://github.com/ClaraGuerville/projet-nft#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.7",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.3.1",
+    "mongoose-unique-validator": "^3.0.0"
   }
 }
