--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.3.1",
     "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4",
     "node": "^17.7.2"
   }
 }
